tests/baselines/reference/privateNameStaticMethodCallExpression.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameStaticMethodCallExpression.ts(8,9): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'typeof AA'.


==== tests/cases/conformance/classes/members/privateNames/privateNameStaticMethodCallExpression.ts (1 errors) ====
    class AA {
        static #method() { this.x = 10; };
        static #method2(a, ...b) {};
        static x = 1;
        test() {
            AA.#method();
            const func = AA.#method;
            func();
            ~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'typeof AA'.
            new AA.#method();
    
            const arr = [ 1, 2 ];
            AA.#method2(0, ...arr, 3);
    
            const b = new AA.#method2(0, ...arr, 3); //Error 
            const str = AA.#method2`head${1}middle${2}tail`;
            AA.getClass().#method2`test${1}and${2}`;
    
            AA.getClass().#method2(0, ...arr, 3); 
            const b2 = new (AA.getClass().#method2)(0, ...arr, 3); //Error 
            const str2 = AA.getClass().#method2`head${1}middle${2}tail`;
        }
        static getClass() { return AA; }
    }
    